# delta-farmer-cross

./: .gitignore  CHANGELOG.md  CLAUDE.md  Makefile  changelog.md  config.example.toml  df.py  pyproject.toml  readme.md  readme.ru.md  readme.uk.md
.github/workflows/: ci.yml  lint.yml
apps/: ethereal.py  hyena.py  nado.py  omni.py  omni_nado.py  onyx.py  pacifica.py  rise.py  zero1.py
clients/: __init__.py  ethereal.py  hyena.py  hyperliquid.py  nado.py  omni.py  onyx.py  pacifica.py  rise.py  zero1.py
configs/: omni_nado.toml
configs.example/: nado.toml  pacifica.toml
docs/plans/: 20260530-mixed-exchange-account-group-draft.md  20260612-delta-farmer-control-plane.md
lib/: cli.py  crypto.py  decorators.py  http.py  logger.py  models.py  proxy.py  store.py  table.py  telegram.py  telemetry.py  unwaf.py  update.py  utils.py
scripts/: orderbook.py  smoke.py  weekly.py  weekly_burn.py
strategy/: __init__.py  cycle.py  delta.py  execution.py  models.py  planner.py  runner.py  spread_cycle.py  spread_models.py  spread_trade.py  strategy.py  symbols.py  trade.py  trading.py
tests/: conftest.py  test_df.py  test_hyperliquid.py  test_limit_order_simulator.py  test_nado.py  test_omni.py  test_planner.py  test_spread_strategy.py  test_strategy.py  test_update.py  test_utils.py
utils/: cli.py  helpers.py  http.py  store.py
