[project]
name = "delta-farmer"
version = "0.8.0"
description = "Automated delta-neutral trading for crypto points farming across perpetual DEXs"
readme = "readme.md"
requires-python = "==3.14.*"
license = "MIT"
authors = [{ name = "vladkens" }]
keywords = ["crypto", "trading", "delta-neutral", "perpdex"]
dependencies = [
    "base58>=2.1.1",
    "cryptography>=44.0.0",
    "curl-cffi>=0.14.0",
    "eth-account>=0.13.7",
    "eth-utils>=6.0.0",
    "filelock>=3.24.3",
    "lz4>=4.0.0",
    "loguru>=0.7.3",
    "msgpack>=1.1.2",
    "py-machineid>=1.0.0",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "rich>=14.3.2",
    "solders>=0.27.1",
]

[dependency-groups]
test = ["pytest>=9.0.2", "pytest-asyncio>=1.3.0"]
lint = ["pyright>=1.1.409", "ruff>=0.15.1", "vulture>=2.14"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["apps", "clients", "strategy", "lib", "scripts"]

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"
filterwarnings = ["ignore::DeprecationWarning:websockets"]

[tool.uv]
exclude-newer = "7 days"

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "RUF", "C4", "SIM"]
ignore = ["RUF001", "RUF002", "RUF003", "RUF005", "RUF006", "SIM105"]

[tool.pyright]
include = ["apps", "clients", "strategy", "lib", "scripts"]
typeCheckingMode = "standard"
